// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketAssignee/> render() should display teams only 1`] = `
<div
  class="classname dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="toggle btn-transparent dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      Unassigned
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown-menu dropdown-menu-right"
    role="menu"
    style="width: 260px; z-index: 1051;"
    tabindex="-1"
  >
    <h6
      class="dropdown-header"
      tabindex="-1"
    >
      ASSIGN TO:
    </h6>
    <h6
      class="dropdown-item-input dropdown-header"
      tabindex="-1"
    />
    <div>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <h6
        class="text-uppercase dropdown-header"
        tabindex="-1"
      >
        Teams
      </h6>
      <div
        class="items"
      >
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="TeamLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  T1
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              Team 1
            </span>
          </div>
        </button>
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="TeamLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  T2
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              Team 2
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketAssignee/> render() should display the email of the agent assigned as its name because it has no name 1`] = `
<div
  class="classname dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="toggle btn-transparent dropdown-toggle btn btn-secondary"
    type="button"
  >
    <div
      class="AgentLabel"
    >
      <div
        class="component square avatar"
        style="width: 26px; height: 26px;"
      >
        <div
          class="initials"
          style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
        >
          <span
            style="line-height: 28px;"
          >
            s
          </span>
        </div>
      </div>
      <span
        class="name"
        style="max-width: 100px;"
      >
        steve@acme.gorgias.io
      </span>
    </div>
  </button>
  <div
    aria-hidden="true"
    class="dropdown-menu dropdown-menu-right"
    role="menu"
    style="width: 260px; z-index: 1051;"
    tabindex="-1"
  >
    <h6
      class="dropdown-header"
      tabindex="-1"
    >
      ASSIGN TO:
    </h6>
    <h6
      class="dropdown-item-input dropdown-header"
      tabindex="-1"
    />
    <div>
      <button
        class="assigneeItem dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="AgentLabel assigneeLabel"
        >
          <div
            class="component square avatar"
            style="width: 26px; height: 26px;"
          >
            <div
              class="initials"
              style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
            >
              <span
                style="line-height: 28px;"
              >
                s
              </span>
            </div>
          </div>
          <span
            class="name"
          >
            steve@acme.gorgias.io
          </span>
        </div>
        <i
          class="material-icons md-2"
        >
          close
        </i>
      </button>
      <button
        class="item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Assign yourself
      </button>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <h6
        class="text-uppercase dropdown-header"
        tabindex="-1"
      >
        Teams
      </h6>
      <div
        class="items"
      >
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="TeamLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  T1
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              Team 1
            </span>
          </div>
        </button>
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="TeamLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  T2
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              Team 2
            </span>
          </div>
        </button>
      </div>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <h6
        class="text-uppercase dropdown-header"
        tabindex="-1"
      >
        Users
      </h6>
      <div
        class="items"
      >
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="AgentLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  U2
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              User 2
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketAssignee/> render() should display the info of the agent assigned 1`] = `
<div
  class="classname dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="toggle btn-transparent dropdown-toggle btn btn-secondary"
    type="button"
  >
    <div
      class="AgentLabel"
    >
      <div
        class="component hasImage square avatar"
        style="width: 26px; height: 26px;"
      >
        <div
          class="initials"
          style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
        >
          <span
            style="line-height: 28px;"
          >
            SF
          </span>
        </div>
        <img
          alt="avatar"
          class="gravatar"
          src="profilePictureUrl"
        />
      </div>
      <span
        class="name"
        style="max-width: 100px;"
      >
        Steve Frizeli
      </span>
    </div>
  </button>
  <div
    aria-hidden="true"
    class="dropdown-menu dropdown-menu-right"
    role="menu"
    style="width: 260px; z-index: 1051;"
    tabindex="-1"
  >
    <h6
      class="dropdown-header"
      tabindex="-1"
    >
      ASSIGN TO:
    </h6>
    <h6
      class="dropdown-item-input dropdown-header"
      tabindex="-1"
    />
    <div>
      <button
        class="assigneeItem dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="AgentLabel assigneeLabel"
        >
          <div
            class="component square avatar"
            style="width: 26px; height: 26px;"
          >
            <div
              class="initials"
              style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
            >
              <span
                style="line-height: 28px;"
              >
                SF
              </span>
            </div>
          </div>
          <span
            class="name"
          >
            Steve Frizeli
          </span>
        </div>
        <i
          class="material-icons md-2"
        >
          close
        </i>
      </button>
      <button
        class="item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Assign yourself
      </button>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <h6
        class="text-uppercase dropdown-header"
        tabindex="-1"
      >
        Teams
      </h6>
      <div
        class="items"
      >
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="TeamLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  T1
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              Team 1
            </span>
          </div>
        </button>
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="TeamLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  T2
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              Team 2
            </span>
          </div>
        </button>
      </div>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <h6
        class="text-uppercase dropdown-header"
        tabindex="-1"
      >
        Users
      </h6>
      <div
        class="items"
      >
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="AgentLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  U2
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              User 2
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketAssignee/> render() should display the info of the agent assigned even if a team is assigned too 1`] = `
<div
  class="classname dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="toggle btn-transparent dropdown-toggle btn btn-secondary"
    type="button"
  >
    <div
      class="AgentLabel"
    >
      <div
        class="component square avatar"
        style="width: 26px; height: 26px;"
      >
        <div
          class="initials"
          style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
        >
          <span
            style="line-height: 28px;"
          >
            s
          </span>
        </div>
      </div>
      <span
        class="name"
        style="max-width: 100px;"
      >
        steve@acme.gorgias.io
      </span>
    </div>
  </button>
  <div
    aria-hidden="true"
    class="dropdown-menu dropdown-menu-right"
    role="menu"
    style="width: 260px; z-index: 1051;"
    tabindex="-1"
  >
    <h6
      class="dropdown-header"
      tabindex="-1"
    >
      ASSIGN TO:
    </h6>
    <h6
      class="dropdown-item-input dropdown-header"
      tabindex="-1"
    />
    <div>
      <button
        class="assigneeItem dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="TeamLabel assigneeLabel"
        >
          <div
            class="component square avatar"
            style="width: 26px; height: 26px;"
          >
            <div
              class="initials"
              style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
            >
              <span
                style="line-height: 28px;"
              >
                T1
              </span>
            </div>
          </div>
          <span
            class="name"
          >
            Team 1
            <span
              class="nameIcon material-icons md-2"
            >
              people
            </span>
          </span>
        </div>
        <i
          class="material-icons md-2"
        >
          close
        </i>
      </button>
      <button
        class="assigneeItem dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="AgentLabel assigneeLabel"
        >
          <div
            class="component square avatar"
            style="width: 26px; height: 26px;"
          >
            <div
              class="initials"
              style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
            >
              <span
                style="line-height: 28px;"
              >
                s
              </span>
            </div>
          </div>
          <span
            class="name"
          >
            steve@acme.gorgias.io
          </span>
        </div>
        <i
          class="material-icons md-2"
        >
          close
        </i>
      </button>
      <button
        class="item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Assign yourself
      </button>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <h6
        class="text-uppercase dropdown-header"
        tabindex="-1"
      >
        Teams
      </h6>
      <div
        class="items"
      >
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="TeamLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  T2
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              Team 2
            </span>
          </div>
        </button>
      </div>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <h6
        class="text-uppercase dropdown-header"
        tabindex="-1"
      >
        Users
      </h6>
      <div
        class="items"
      >
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="AgentLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  U2
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              User 2
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketAssignee/> render() should display the name of the team assigned because there is no user assigned 1`] = `
<div
  class="classname dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="toggle btn-transparent dropdown-toggle btn btn-secondary"
    type="button"
  >
    <div
      class="TeamLabel"
    >
      <div
        class="component square avatar"
        style="width: 26px; height: 26px;"
      >
        <div
          class="initials"
          style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
        >
          <span
            style="line-height: 28px;"
          >
            T1
          </span>
        </div>
      </div>
      <span
        class="name"
        style="max-width: 100px;"
      >
        Team 1
      </span>
    </div>
  </button>
  <div
    aria-hidden="true"
    class="dropdown-menu dropdown-menu-right"
    role="menu"
    style="width: 260px; z-index: 1051;"
    tabindex="-1"
  >
    <h6
      class="dropdown-header"
      tabindex="-1"
    >
      ASSIGN TO:
    </h6>
    <h6
      class="dropdown-item-input dropdown-header"
      tabindex="-1"
    />
    <div>
      <button
        class="assigneeItem dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="TeamLabel assigneeLabel"
        >
          <div
            class="component square avatar"
            style="width: 26px; height: 26px;"
          >
            <div
              class="initials"
              style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
            >
              <span
                style="line-height: 28px;"
              >
                T1
              </span>
            </div>
          </div>
          <span
            class="name"
          >
            Team 1
            <span
              class="nameIcon material-icons md-2"
            >
              people
            </span>
          </span>
        </div>
        <i
          class="material-icons md-2"
        >
          close
        </i>
      </button>
      <button
        class="item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Assign yourself
      </button>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <h6
        class="text-uppercase dropdown-header"
        tabindex="-1"
      >
        Teams
      </h6>
      <div
        class="items"
      >
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="TeamLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  T2
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              Team 2
            </span>
          </div>
        </button>
      </div>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <h6
        class="text-uppercase dropdown-header"
        tabindex="-1"
      >
        Users
      </h6>
      <div
        class="items"
      >
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="AgentLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  U1
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              User 1
            </span>
          </div>
        </button>
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="AgentLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  U2
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              User 2
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketAssignee/> render() should display users only 1`] = `
<div
  class="classname dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="toggle btn-transparent dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      Unassigned
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown-menu dropdown-menu-right"
    role="menu"
    style="width: 260px; z-index: 1051;"
    tabindex="-1"
  >
    <h6
      class="dropdown-header"
      tabindex="-1"
    >
      ASSIGN TO:
    </h6>
    <h6
      class="dropdown-item-input dropdown-header"
      tabindex="-1"
    />
    <div>
      <button
        class="item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Assign yourself
      </button>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <h6
        class="text-uppercase dropdown-header"
        tabindex="-1"
      >
        Users
      </h6>
      <div
        class="items"
      >
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="AgentLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  U1
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              User 1
            </span>
          </div>
        </button>
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="AgentLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  U2
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              User 2
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketAssignee/> render() should not display any agent info because there is no assignee 1`] = `
<div
  class="classname dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="toggle btn-transparent dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      Unassigned
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown-menu dropdown-menu-right"
    role="menu"
    style="width: 260px; z-index: 1051;"
    tabindex="-1"
  >
    <h6
      class="dropdown-header"
      tabindex="-1"
    >
      ASSIGN TO:
    </h6>
    <h6
      class="dropdown-item-input dropdown-header"
      tabindex="-1"
    />
    <div>
      <button
        class="item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Assign yourself
      </button>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <h6
        class="text-uppercase dropdown-header"
        tabindex="-1"
      >
        Teams
      </h6>
      <div
        class="items"
      >
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="TeamLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  T1
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              Team 1
            </span>
          </div>
        </button>
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="TeamLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  T2
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              Team 2
            </span>
          </div>
        </button>
      </div>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <h6
        class="text-uppercase dropdown-header"
        tabindex="-1"
      >
        Users
      </h6>
      <div
        class="items"
      >
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="AgentLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  U1
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              User 1
            </span>
          </div>
        </button>
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="AgentLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  U2
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              User 2
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketAssignee/> render() should not display teams because object is empty 1`] = `
<div
  class="classname dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="toggle btn-transparent dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      Unassigned
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown-menu dropdown-menu-right"
    role="menu"
    style="width: 260px; z-index: 1051;"
    tabindex="-1"
  >
    <h6
      class="dropdown-header"
      tabindex="-1"
    >
      ASSIGN TO:
    </h6>
    <h6
      class="dropdown-item-input dropdown-header"
      tabindex="-1"
    />
    <div>
      <button
        class="item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Assign yourself
      </button>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <h6
        class="text-uppercase dropdown-header"
        tabindex="-1"
      >
        Users
      </h6>
      <div
        class="items"
      >
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="AgentLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  U1
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              User 1
            </span>
          </div>
        </button>
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="AgentLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  U2
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              User 2
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketAssignee/> should read data from the redux store correctly 1`] = `
<div
  class="classname dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="toggle dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      Unassigned
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown-menu dropdown-menu-right"
    role="menu"
    style="width: 260px; z-index: 1051;"
    tabindex="-1"
  >
    <h6
      class="dropdown-header"
      tabindex="-1"
    >
      ASSIGN TO:
    </h6>
    <h6
      class="dropdown-item-input dropdown-header"
      tabindex="-1"
    />
    <div>
      <button
        class="item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Assign yourself
      </button>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <h6
        class="text-uppercase dropdown-header"
        tabindex="-1"
      >
        Teams
      </h6>
      <div
        class="items"
      >
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="TeamLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  T1
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              Team 1
            </span>
          </div>
        </button>
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="TeamLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  T2
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              Team 2
            </span>
          </div>
        </button>
      </div>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <h6
        class="text-uppercase dropdown-header"
        tabindex="-1"
      >
        Users
      </h6>
      <div
        class="items"
      >
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="AgentLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  U1
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              User 1
            </span>
          </div>
        </button>
        <button
          class="item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="AgentLabel"
          >
            <div
              class="component square avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  U2
                </span>
              </div>
            </div>
            <span
              class="name"
            >
              User 2
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
